# Pulsar-Native-Legacy

./: Cargo.toml  output.glue
.claude/: settings.local.json
src/: app.rs  components.rs  frame_counter.rs  game_engine_ui.rs  level_editor.rs  main.rs  tab_system.rs
src/components/: editor_plugin.rs  menu_bar.rs  mod.rs  tab_instance.rs  tab_registry.rs  tab_system.rs  tabs_bar.rs  title_bar.rs
src/components/editors/: ai_behavior.rs  asterisk.rs  example.rs  level.rs  mod.rs
src/components/editors/level/: mod.rs
src/ui/: editor_panels.rs  layout_manager.rs  mod.rs  panel_system.rs  simple_ui.rs  theme.rs
