
[package]
name = "pulsar_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/tristanpoland/zed", rev = "c937a2fcddc79d3b4864a12c0ccd5e149adf44a5" }
image = "0.25.6"
once_cell = "1.20.3"
rand = "0.9.0"
rfd = "0.15.2"
tokio = {version = "1.43.0", features = ["full"]}
rayon = "1.8"
lazy_static = "1.4.0"
windows-sys = { version = "0.60.2", features = ["Win32", "Win32_System_Threading"] }