[package]
name = "pulsar_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.10.0"
imgui-winit-support = "0.10.0"
imgui-wgpu = "0.22.0"
winit = "0.27.0"
wgpu = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
image = "0.25.6"
rand = "0.8.5"
rfd = "0.15.2"
rayon = "1.8"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32", "Win32_System_Threading"] }